--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,8 +6,8 @@ permissions:
   pages: write
   id-token: write
 env: 
-  NEXT_PUBLIC_APP_API_URL: ${{vars.NEXT_PUBLIC_APP_API_URL}}
-  NEXT_PUBLIC_API_KEY: ${{vars.NEXT_PUBLIC_API_KEY}}
+  NEXT_PUBLIC_APP_API_URL: ${{secrets.NEXT_PUBLIC_APP_API_URL}}
+  NEXT_PUBLIC_API_KEY: ${{secrets.NEXT_PUBLIC_API_KEY}}
 jobs:
   lint-and-unit:
     runs-on: ubuntu-latest
