--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
         run: |
           echo "NEXT_PUBLIC_APP_API_URL=${{ secrets.NEXT_PUBLIC_APP_API_URL }}" >> .env.production
           echo "NEXT_PUBLIC_API_KEY=${{ secrets.NEXT_PUBLIC_API_KEY }}" >> .env.production
+          cd /home/mumumu/actions-runner/_work/production/production
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
